# civic-claim-provenance

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
.superpowers/sdd/: progress.md
analysis/: DSNY_Monthly_Tonnage_Data_Data_Dictionary-2026-04-16.xlsx  README.md  nyc_composting_spatiotemporal.ipynb  nyc_composting_spatiotemporal_1.ipynb
cli/: ccp.py  curie.py  flexo_client.py  trig_to_views.py  views.py
docs/: BRANCHING.md  README.md  cowork-data-verification-task.md  hackathon-project-memo.md  interface-contracts.md  ontology-and-doctrine.md  policy-analysis-and-data-assessment.md  work-packages-memo.md
docs/superpowers/plans/: 2026-06-24-graph-explorer-scaffold.md
docs/superpowers/specs/: 2026-06-24-graph-explorer-scaffold-design.md
fixtures/: capture-template.md  graph-explorer-stub.trig  nyc-composting-real.trig
flexo/: .env.example  README.md  init.sh
notebooks/: dashboard.py
notebooks/__marimo__/session/: dashboard.py.json
ontology/: closure_shapes.ttl  rdf_utils.py  shacl_runner.py
server/: app.py
tests/: test_closure.py  test_e2e.py  test_flexo_client.py  test_server.py  test_trig_to_views.py  test_views.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src/data/: views.ts
ui/src/filters/: Filters.tsx
ui/src/graph/: Graph.tsx  style.ts
ui/src/inspector/: Inspector.tsx
views/: schema.json
views/cache/: V1.json  V2.json  V3.json  V4.json  V5.json
views/queries/: V1.rq  V2.rq  V3.rq  V5.rq
