[project]
name = "civic-claim-provenance"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12,<1.0",
  "httpx>=0.28",
  "rdflib>=7.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pyshacl>=0.31",
  "marimo>=0.23.10",
]

[project.scripts]
ccp = "cli.ccp:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "server", "ontology"]
